--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3.1.0
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
+      # - name: validate gradle wrapper
+      #   uses: gradle/wrapper-validation-action@v1
       - name: setup java ${{ matrix.java }}
         uses: actions/setup-java@v3.6.0
         with:
@@ -29,11 +29,11 @@ jobs:
 
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
+        run: chmod +x ./two_d_craft/gradlew
       - name: build
-        run: ./gradlew build
+        run: ./two_d_craft/gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: build/libs/
+          path: two_d_craft/build/libs/
