--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,6 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: ${{ matrix.java }}
-      - name: cd two_d_craft
-        run: cd two_d_craft
       - name: Setup cache
         uses: actions/cache@v3.0.11
         with:
@@ -31,11 +29,11 @@ jobs:
 
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
+        run: cd two_d_craft && chmod +x ./gradlew
       - name: build
-        run: ./gradlew build
+        run: cd two_d_craft && ./gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: build/libs/
+          path: two_d_craft/build/libs/
