--- a/two_d_craft/gradle.properties
+++ b/two_d_craft/gradle.properties
@@ -7,6 +7,7 @@ yarn_mappings=1.20.1+build.3
 loader_version=0.15.7
 # Mod Properties
 mod_version=1.1-SNAPSHOT
+mod_id = two_d_craft
 maven_group=com.quidvio
 archives_base_name=two_d_craft
 # Dependencies
